started adding content and refining the design

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,4 +3,6 @@ title: 'Y2Y New Haven'
 author:
   name: 'Jake Brussel Faria'
 
-description: 
+description: >
+  Everything you need to know about lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  Quisque ut condimentum est. Morbi eu tortor ante.
